# MLOps

./: .coverage  .pre-commit-config.yaml  MLOps-Template.ipynb  Makefile  README.md  pyproject.toml
.github/: workloads.yaml
.github/workflows/: main.yml  workloads.yaml
mlruns/0/: meta.yaml
mlruns/148790105462225129/: meta.yaml
mlruns/148790105462225129/561e020ffc1a4fff9dd6670e3afc1a3e/: meta.yaml
mlruns/148790105462225129/561e020ffc1a4fff9dd6670e3afc1a3e/metrics/: foo
mlruns/148790105462225129/561e020ffc1a4fff9dd6670e3afc1a3e/tags/: mlflow.runName
mlruns/148790105462225129/d1564139f11f4410a38860aedeb03464/: meta.yaml
mlruns/148790105462225129/d1564139f11f4410a38860aedeb03464/metrics/: foo
mlruns/148790105462225129/d1564139f11f4410a38860aedeb03464/tags/: mlflow.runName
mlruns/461967510655362903/: meta.yaml
mlruns/461967510655362903/9de7af02780f44d99c1c16a81a57e57b/: meta.yaml
mlruns/461967510655362903/9de7af02780f44d99c1c16a81a57e57b/metrics/: foo
mlruns/461967510655362903/9de7af02780f44d99c1c16a81a57e57b/tags/: mlflow.runName  mlflow.source.name
mlruns/461967510655362903/c7d7560e6cd24081a61ff3a8a5b8f6c7/: meta.yaml
mlruns/461967510655362903/c7d7560e6cd24081a61ff3a8a5b8f6c7/metrics/: foo
mlruns/461967510655362903/c7d7560e6cd24081a61ff3a8a5b8f6c7/tags/: mlflow.runName
mlruns/461967510655362903/c80e6f64c6ac401790796a1cbace6ebb/: meta.yaml
notebooks/: MLOps-Template.ipynb  mlflow-projects-tracking.ipynb  mlflow_test_2.ipynb  mlflowtest.ipynb
tests/data/: conftest.py  test_data.py
(+2 files in other folders)
