[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["pparul <parul.pandey85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
great-expectations = "^0.17.23"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"
coverage = "^7.3.2"
mlflow = "^2.8.0"


[tool.poetry.group.lint.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
